# todoister

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml  rofi_todo
todoister/: __main__.py  api_key.py  cli.py  desktop_notify.py
