[tool.poetry]
name = "todoister"
version = "0.1.0"
description = ""
authors = ["Gabriel Lopes Rodrigues <gabriellopes@usp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
todoist-api-python = "^2.0.1"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"

[tool.poetry.scripts]
todoister = "todoister.cli:add_task"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
